--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -200,8 +200,7 @@
         padding: 0px 34px 30px 29px
       &__text
         max-width: 219px
-        height: 260px
-        overflow: hidden
+        height: 268px
         text-align: left
       &__button
         top: 30px
